k8s/deploy/base/spring/spring.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring
  namespace: spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      serviceAccountName: spring
      containers:
        - image: index.docker.io/beenotice/spring:0.0.1-SNAPSHOT
          name: app
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: "0.25"
              memory: 512Mi
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            initialDelaySeconds: 60
            periodSeconds: 2
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
            initialDelaySeconds: 10
          volumeMounts:
            - name: config-volume
              mountPath: /application/config
              readOnly: true
      volumes:
        - name: config-volume
          projected:
            sources:
              - secret:
                  name: spring-secret
              - configMap:
                  name: spring-config
---
apiVersion: v1
kind: Service
metadata:
  name: spring
  namespace: spring
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: spring

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring
  namespace: spring
  annotations:
    cert-manager.io/cluster-issuer: "issuer"
spec:
  ingressClassName: "kong"
  rules:
    - host: spring.stacktic.beenotice.eu
      http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: spring
                  port:
                    name: http
  tls:
    - hosts:
        - spring.stacktic.beenotice.eu
      secretName: wildcard-tls-secret
